added text cleaning func

--- a/notebooks/water_pump_eda.ipynb
+++ b/notebooks/water_pump_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,14 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from string import punctuation\n",
+    "\n",
+    "import nltk, re\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
     "\n",
     "pd.set_option('max_columns', None)\n",
     "pd.set_option('max_rows', None)"
@@ -24,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = pd.read_csv('../data/training_set_labels.csv')"
+    "y = pd.read_csv('../data/training_set_labels.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -130,18 +138,18 @@
        "9  46144      functional"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train.head(10)"
+    "y.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +169,12 @@
     }
    ],
    "source": [
-    "y_train.info()"
+    "y.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -269,18 +277,18 @@
        "max     74247.000000          NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train.describe(include='all')"
+    "y.describe(include='all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +300,13 @@
        "Name: status_group, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train['status_group'].value_counts()"
+    "y['status_group'].value_counts()"
    ]
   },
   {
@@ -310,16 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('../data/training_set_values.csv')"
+    "X = pd.read_csv('../data/training_set_values.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -942,18 +950,167 @@
        "9                    hand pump             hand pump  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.head(10)"
+    "X.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "974"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(X['funder'].value_counts()==1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1898"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['funder'].unique().size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                           0\n",
+       "amount_tsh                   0\n",
+       "date_recorded                0\n",
+       "funder                    3635\n",
+       "gps_height                   0\n",
+       "installer                 3655\n",
+       "longitude                    0\n",
+       "latitude                     0\n",
+       "wpt_name                     0\n",
+       "num_private                  0\n",
+       "basin                        0\n",
+       "subvillage                 371\n",
+       "region                       0\n",
+       "region_code                  0\n",
+       "district_code                0\n",
+       "lga                          0\n",
+       "ward                         0\n",
+       "population                   0\n",
+       "public_meeting            3334\n",
+       "recorded_by                  0\n",
+       "scheme_management         3877\n",
+       "scheme_name              28166\n",
+       "permit                    3056\n",
+       "construction_year            0\n",
+       "extraction_type              0\n",
+       "extraction_type_group        0\n",
+       "extraction_type_class        0\n",
+       "management                   0\n",
+       "management_group             0\n",
+       "payment                      0\n",
+       "payment_type                 0\n",
+       "water_quality                0\n",
+       "quality_group                0\n",
+       "quantity                     0\n",
+       "quantity_group               0\n",
+       "source                       0\n",
+       "source_type                  0\n",
+       "source_class                 0\n",
+       "waterpoint_type              0\n",
+       "waterpoint_type_group        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_recorded 356\n",
+      "funder 1898\n",
+      "installer 2146\n",
+      "wpt_name 37400\n",
+      "basin 9\n",
+      "subvillage 19288\n",
+      "region 21\n",
+      "lga 125\n",
+      "ward 2092\n",
+      "public_meeting 3\n",
+      "recorded_by 1\n",
+      "scheme_management 13\n",
+      "scheme_name 2697\n",
+      "permit 3\n",
+      "extraction_type 18\n",
+      "extraction_type_group 13\n",
+      "extraction_type_class 7\n",
+      "management 12\n",
+      "management_group 5\n",
+      "payment 7\n",
+      "payment_type 7\n",
+      "water_quality 8\n",
+      "quality_group 6\n",
+      "quantity 5\n",
+      "quantity_group 5\n",
+      "source 10\n",
+      "source_type 7\n",
+      "source_class 3\n",
+      "waterpoint_type 7\n",
+      "waterpoint_type_group 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in X.select_dtypes(['object']).columns:\n",
+    "    print(col, X[col].unique().size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -965,35 +1122,391 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_cols = X_train.select_dtypes([np.number]).columns\n",
+    "num_cols = X.select_dtypes([np.number]).columns\n",
     "num_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([], dtype='object')"
+       "Index(['id', 'amount_tsh', 'gps_height', 'longitude', 'latitude',\n",
+       "       'num_private', 'region_code', 'district_code', 'population',\n",
+       "       'construction_year'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat_cols = X_train.select_dtypes('category').columns\n",
-    "cat_cols"
+    "num_cols = X.select_dtypes(['number']).columns\n",
+    "num_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'amount_tsh',\n",
+       " 'gps_height',\n",
+       " 'longitude',\n",
+       " 'latitude',\n",
+       " 'num_private',\n",
+       " 'region_code',\n",
+       " 'district_code',\n",
+       " 'population',\n",
+       " 'construction_year']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_cols = [cname for cname in X.columns if X[cname].dtype in ['int64', 'float64']]\n",
+    "numeric_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['date_recorded',\n",
+       " 'funder',\n",
+       " 'installer',\n",
+       " 'wpt_name',\n",
+       " 'basin',\n",
+       " 'subvillage',\n",
+       " 'region',\n",
+       " 'lga',\n",
+       " 'ward',\n",
+       " 'public_meeting',\n",
+       " 'recorded_by',\n",
+       " 'scheme_management',\n",
+       " 'scheme_name',\n",
+       " 'permit',\n",
+       " 'extraction_type',\n",
+       " 'extraction_type_group',\n",
+       " 'extraction_type_class',\n",
+       " 'management',\n",
+       " 'management_group',\n",
+       " 'payment',\n",
+       " 'payment_type',\n",
+       " 'water_quality',\n",
+       " 'quality_group',\n",
+       " 'quantity',\n",
+       " 'quantity_group',\n",
+       " 'source',\n",
+       " 'source_type',\n",
+       " 'source_class',\n",
+       " 'waterpoint_type',\n",
+       " 'waterpoint_type_group']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols2 = [cname for cname in X.columns if X[cname].dtype in ['object']]\n",
+    "cat_cols2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date_recorded', 'funder', 'installer', 'wpt_name', 'basin',\n",
+       "       'subvillage', 'region', 'lga', 'ward', 'public_meeting', 'recorded_by',\n",
+       "       'scheme_management', 'scheme_name', 'permit', 'extraction_type',\n",
+       "       'extraction_type_group', 'extraction_type_class', 'management',\n",
+       "       'management_group', 'payment', 'payment_type', 'water_quality',\n",
+       "       'quality_group', 'quantity', 'quantity_group', 'source', 'source_type',\n",
+       "       'source_class', 'waterpoint_type', 'waterpoint_type_group'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols3 = X.select_dtypes(['object']).columns\n",
+    "cat_cols3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['basin',\n",
+       " 'region',\n",
+       " 'lga',\n",
+       " 'public_meeting',\n",
+       " 'recorded_by',\n",
+       " 'scheme_management',\n",
+       " 'permit',\n",
+       " 'extraction_type',\n",
+       " 'extraction_type_group',\n",
+       " 'extraction_type_class',\n",
+       " 'management',\n",
+       " 'management_group',\n",
+       " 'payment',\n",
+       " 'payment_type',\n",
+       " 'water_quality',\n",
+       " 'quality_group',\n",
+       " 'quantity',\n",
+       " 'quantity_group',\n",
+       " 'source',\n",
+       " 'source_type',\n",
+       " 'source_class',\n",
+       " 'waterpoint_type',\n",
+       " 'waterpoint_type_group']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols_filtered = [col for col in X.select_dtypes(['object']) if X[col].unique().size <= 125]\n",
+    "cat_cols_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols = list(num_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['basin',\n",
+       " 'region',\n",
+       " 'lga',\n",
+       " 'public_meeting',\n",
+       " 'recorded_by',\n",
+       " 'scheme_management',\n",
+       " 'permit',\n",
+       " 'extraction_type',\n",
+       " 'extraction_type_group',\n",
+       " 'extraction_type_class',\n",
+       " 'management',\n",
+       " 'management_group',\n",
+       " 'payment',\n",
+       " 'payment_type',\n",
+       " 'water_quality',\n",
+       " 'quality_group',\n",
+       " 'quantity',\n",
+       " 'quantity_group',\n",
+       " 'source',\n",
+       " 'source_type',\n",
+       " 'source_class',\n",
+       " 'waterpoint_type',\n",
+       " 'waterpoint_type_group',\n",
+       " 'id',\n",
+       " 'amount_tsh',\n",
+       " 'gps_height',\n",
+       " 'longitude',\n",
+       " 'latitude',\n",
+       " 'num_private',\n",
+       " 'region_code',\n",
+       " 'district_code',\n",
+       " 'population',\n",
+       " 'construction_year']"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cols = cat_cols_filtered + list(num_cols)\n",
+    "test_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['basin',\n",
+       " 'region',\n",
+       " 'lga',\n",
+       " 'public_meeting',\n",
+       " 'recorded_by',\n",
+       " 'scheme_management',\n",
+       " 'permit',\n",
+       " 'extraction_type',\n",
+       " 'extraction_type_group',\n",
+       " 'extraction_type_class',\n",
+       " 'management',\n",
+       " 'management_group',\n",
+       " 'payment',\n",
+       " 'payment_type',\n",
+       " 'water_quality',\n",
+       " 'quality_group',\n",
+       " 'quantity',\n",
+       " 'quantity_group',\n",
+       " 'source',\n",
+       " 'source_type',\n",
+       " 'source_class',\n",
+       " 'waterpoint_type',\n",
+       " 'waterpoint_type_group',\n",
+       " 'id',\n",
+       " 'amount_tsh',\n",
+       " 'gps_height',\n",
+       " 'longitude',\n",
+       " 'latitude',\n",
+       " 'num_private',\n",
+       " 'region_code',\n",
+       " 'district_code',\n",
+       " 'population',\n",
+       " 'construction_year']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text:str, remove_punc=True, remove_spaces=True)->str:\n",
+    "    # Lowercase\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    if remove_punc:\n",
+    "        text = re.sub(r'[%s]' % re.escape(punctuation), ' ', text)\n",
+    "\n",
+    "    if remove_spaces:\n",
+    "        text = text.replace(' ', '')\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the20newsgroupsdatasetisacollectionofapproximately20000newsgroupdocumentspartitionednearlyevenlyacross20differentnewsgroupstothebestofourknowledgeitwasoriginallycollectedbykenlangprobablyforhispaper“newsweederlearningtofilternetnews”thoughhedoesnotexplicitlymentionthiscollectionthe20newsgroupscollectionhasbecomeapopulardatasetforexperimentsintextapplicationsofmachinelearningtechniquessuchastextclassificationandtextclustering\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = '''The 20 Newsgroups data set is a collection of approximately 20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups. To the best of our knowledge, it was originally collected by Ken Lang, probably for his paper “Newsweeder: Learning to filter netnews,” though he does not explicitly mention this collection. The 20 newsgroups collection has become a popular data set for experiments in text applications of machine learning techniques, such as text classification and text clustering.'''\n",
+    "\n",
+    "print(clean_text(s, remove_spaces=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                  Roman\n",
+      "1                Grumeti\n",
+      "2           Lottery Club\n",
+      "3                 Unicef\n",
+      "4            Action In A\n",
+      "5    Mkinga Distric Coun\n",
+      "6                   Dwsp\n",
+      "7                  Rwssp\n",
+      "8               Wateraid\n",
+      "9            Isingiro Ho\n",
+      "Name: funder, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0                roman\n",
+       "1              grumeti\n",
+       "2          lotteryclub\n",
+       "3               unicef\n",
+       "4            actionina\n",
+       "5    mkingadistriccoun\n",
+       "6                 dwsp\n",
+       "7                rwssp\n",
+       "8             wateraid\n",
+       "9           isingiroho\n",
+       "Name: funder, dtype: object"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test = X['funder'][:10]\n",
+    "print(df_test)\n",
+    "df_test = df_test.apply(lambda x:clean_text(x))\n",
+    "df_test"
    ]
   },
   {
@@ -1002,7 +1515,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str_cols = X_train.select_dtypes().columns"
+    "class TextProcessor():\n",
+    "    def __init__(self, text):\n",
+    "        self.text = text\n",
+    "        \n",
+    "    def transform(self)"
    ]
   },
   {
@@ -1010,7 +1527,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipe = Pipeline(steps=[\n",
+    "    ('preproc' : clean_text)\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -1029,7 +1553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
