small code changes

--- a/notebooks/cam/water_pump_eda.ipynb
+++ b/notebooks/cam/water_pump_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = pd.read_csv('../data/training_set_labels.csv')"
+    "y = pd.read_csv('../../data/training_set_labels.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "9  46144      functional"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "max     74247.000000          NaN"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,25 +288,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "functional                 32259\n",
+      "non functional             22824\n",
+      "functional needs repair     4317\n",
+      "Name: status_group, dtype: int64\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "functional                 32259\n",
-       "non functional             22824\n",
-       "functional needs repair     4317\n",
-       "Name: status_group, dtype: int64"
+       "functional                 0.543081\n",
+       "non functional             0.384242\n",
+       "functional needs repair    0.072677\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y['status_group'].value_counts()"
+    "y_labels = y['status_group'].value_counts().index\n",
+    "y_vals = y['status_group'].value_counts().values\n",
+    "\n",
+    "y_percent = y_vals/len(y)\n",
+    "\n",
+    "print(y['status_group'].value_counts())\n",
+    "pd.Series(index=y_labels, data=y_percent)"
    ]
   },
   {
@@ -318,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_csv('../data/training_set_values.csv')"
+    "X = pd.read_csv('../../data/training_set_values.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +966,7 @@
        "9                    hand pump             hand pump  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +986,7 @@
        "974"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1006,7 @@
        "1898"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1066,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,9 +1077,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1110,7 +1126,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_recorded             356\n",
+      "funder                    1898\n",
+      "installer                 2146\n",
+      "wpt_name                  37400\n",
+      "basin                     9\n",
+      "subvillage                19288\n",
+      "region                    21\n",
+      "lga                       125\n",
+      "ward                      2092\n",
+      "public_meeting            3\n",
+      "recorded_by               1\n",
+      "scheme_management         13\n",
+      "scheme_name               2697\n",
+      "permit                    3\n",
+      "extraction_type           18\n",
+      "extraction_type_group     13\n",
+      "extraction_type_class     7\n",
+      "management                12\n",
+      "management_group          5\n",
+      "payment                   7\n",
+      "payment_type              7\n",
+      "water_quality             8\n",
+      "quality_group             6\n",
+      "quantity                  5\n",
+      "quantity_group            5\n",
+      "source                    10\n",
+      "source_type               7\n",
+      "source_class              3\n",
+      "waterpoint_type           7\n",
+      "waterpoint_type_group     6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in X.select_dtypes(['object']).columns:\n",
+    "    print('{:<25} {}'.format(i, len(X[i].unique())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1185,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1209,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1239,7 @@
        " 'construction_year']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1289,7 @@
        " 'waterpoint_type_group']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1317,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1360,7 @@
        " 'waterpoint_type_group']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1422,7 @@
        " 'construction_year']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1475,7 @@
        " 'construction_year']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1560,7 @@
        "Name: funder, dtype: object"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,9 +1574,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-eb1826ee573e>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-eb1826ee573e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    def transform(self)\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class TextProcessor():\n",
     "    def __init__(self, text):\n",
