--- a/notebooks/asa/Pipeline-Archive.ipynb
+++ b/notebooks/asa/Pipeline-Archive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,22 +50,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>status_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50785</td>\n",
+       "      <td>predicted label</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51630</td>\n",
+       "      <td>predicted label</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17168</td>\n",
+       "      <td>predicted label</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45559</td>\n",
+       "      <td>predicted label</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49871</td>\n",
+       "      <td>predicted label</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(14850, 2)"
+       "      id     status_group\n",
+       "0  50785  predicted label\n",
+       "1  51630  predicted label\n",
+       "2  17168  predicted label\n",
+       "3  45559  predicted label\n",
+       "4  49871  predicted label"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test.shape"
+    "y_test.head()"
    ]
   },
   {
@@ -81,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,372 +548,6 @@
    "source": [
     "df = X_raw.merge(y, left_on = 'id', right_on = 'id')\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create Bogus Submission files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Submission File has **14,850** rows.\n",
-    "- Either 8109 or 8110 are 'functional' (score = 0.5461)\n",
-    "- Either 5672 or 5673 are 'non functional' (score = 0.3820)\n",
-    "- (No file submitted on 3/2/21.)  1067, 1068 or 1069 are 'functional needs repair' (score est. to be 0.0719)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_bogus_file(y_submit, status):\n",
-    "    next_file_id = generate_next_submission_fileid()\n",
-    "    y_submit['status_group'] = status\n",
-    "    filename = f'../../data/water_pump_submission_{next_file_id}_{status}.csv'\n",
-    "    y_submit.to_csv(filename, index = False)\n",
-    "    return filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_bogus_file = create_bogus_file(y_test, \"functional needs repair\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>status_group</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50785</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>51630</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17168</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45559</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>49871</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>52449</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>24806</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>28965</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>36301</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>54122</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>419</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>45750</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>653</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14017</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>44607</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>40228</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>27714</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>28785</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>28330</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>18532</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id             status_group\n",
-       "0   50785  functional needs repair\n",
-       "1   51630  functional needs repair\n",
-       "2   17168  functional needs repair\n",
-       "3   45559  functional needs repair\n",
-       "4   49871  functional needs repair\n",
-       "5   52449  functional needs repair\n",
-       "6   24806  functional needs repair\n",
-       "7   28965  functional needs repair\n",
-       "8   36301  functional needs repair\n",
-       "9   54122  functional needs repair\n",
-       "10    419  functional needs repair\n",
-       "11  45750  functional needs repair\n",
-       "12    653  functional needs repair\n",
-       "13  14017  functional needs repair\n",
-       "14  44607  functional needs repair\n",
-       "15  40228  functional needs repair\n",
-       "16  27714  functional needs repair\n",
-       "17  28785  functional needs repair\n",
-       "18  28330  functional needs repair\n",
-       "19  18532  functional needs repair"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>status_group</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>14830</th>\n",
-       "      <td>74162</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14831</th>\n",
-       "      <td>37994</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14832</th>\n",
-       "      <td>71151</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14833</th>\n",
-       "      <td>45017</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14834</th>\n",
-       "      <td>12592</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14835</th>\n",
-       "      <td>58693</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14836</th>\n",
-       "      <td>57539</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14837</th>\n",
-       "      <td>71252</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14838</th>\n",
-       "      <td>7869</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14839</th>\n",
-       "      <td>57316</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14840</th>\n",
-       "      <td>59757</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14841</th>\n",
-       "      <td>64579</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14842</th>\n",
-       "      <td>57731</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14843</th>\n",
-       "      <td>65541</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14844</th>\n",
-       "      <td>68174</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14845</th>\n",
-       "      <td>39307</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14846</th>\n",
-       "      <td>18990</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14847</th>\n",
-       "      <td>28749</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14848</th>\n",
-       "      <td>33492</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14849</th>\n",
-       "      <td>68707</td>\n",
-       "      <td>functional needs repair</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          id             status_group\n",
-       "14830  74162  functional needs repair\n",
-       "14831  37994  functional needs repair\n",
-       "14832  71151  functional needs repair\n",
-       "14833  45017  functional needs repair\n",
-       "14834  12592  functional needs repair\n",
-       "14835  58693  functional needs repair\n",
-       "14836  57539  functional needs repair\n",
-       "14837  71252  functional needs repair\n",
-       "14838   7869  functional needs repair\n",
-       "14839  57316  functional needs repair\n",
-       "14840  59757  functional needs repair\n",
-       "14841  64579  functional needs repair\n",
-       "14842  57731  functional needs repair\n",
-       "14843  65541  functional needs repair\n",
-       "14844  68174  functional needs repair\n",
-       "14845  39307  functional needs repair\n",
-       "14846  18990  functional needs repair\n",
-       "14847  28749  functional needs repair\n",
-       "14848  33492  functional needs repair\n",
-       "14849  68707  functional needs repair"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "bogus_file_check = pd.read_csv(new_bogus_file)\n",
-    "display(bogus_file_check.head(20))\n",
-    "display(bogus_file_check.tail(20))"
    ]
   },
   {
